--- a/src/components/body/Our Services/OurServices.module.css
+++ b/src/components/body/Our Services/OurServices.module.css
@@ -1,26 +1,41 @@
-.services{
+.services {
   width: 100%;
   background-color: rgb(252, 244, 255);
   display: flex;
-  justify-content: center;
-  align-items: center;
   flex-direction: column;
-}
-h4{
-  margin: 0px;
-  margin-top: 30px;
-}
-h1{
-  margin: 0px;
-}
-p{
-  margin: 5px;
-  font-size: 0.8rem;
-}
-.servicesContainer{
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
   align-items: center;
+  padding: 2rem 1rem;
+  box-sizing: border-box;
+}
+
+.services h4 {
+  margin: 0;
+  font-size: 1.2rem;
+  color: rgb(54, 54, 54);
+  margin-bottom: 0.5rem;
+}
+
+.services h1 {
+  margin: 0;
+  font-size: 2.5rem;
+  color: rgb(44, 44, 44);
+}
+
+.services p {
+  font-size: 1rem;
+  color: rgb(80, 80, 80);
+  max-width: 600px;
+  text-align: center;
+  line-height: 1.6;
+  margin: 1rem 0;
+}
+
+.servicesContainer {
+  display: flex;
+  flex-wrap: wrap;
   justify-content: center;
+  gap: 2rem;
+  width: 100%;
+  padding: 3rem ;
+  box-sizing: border-box;
 }
