--- a/src/components/body/ServicesSection/ServicesSection.module.css
+++ b/src/components/body/ServicesSection/ServicesSection.module.css
@@ -16,14 +16,13 @@
 .callNow:hover{
   background-color: #6d32ec;
 }
-
+ 
 .servicesList {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   gap: 10px;
   margin-top: 20px;
 }
-
 .service {
   border: 1px solid #8c54ff;
   color: #8c54ff;
@@ -31,7 +30,16 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: all 0.3s ease; 
 }
+
+.service:hover {
+  color: black;
+  background-color: #8c54ff;
+  border: 1px solid black;
+  cursor: crosshair;
+}
+
 .gullu{
   width: 30%;
 }
